; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_ipfw_objhash_bitmap_swap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_ipfw_objhash_bitmap_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.namedobj_instance = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipfw_objhash_bitmap_swap(%struct.namedobj_instance* %0, i8** %1, i32* %2) #0 {
  %4 = alloca %struct.namedobj_instance*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.namedobj_instance* %0, %struct.namedobj_instance** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.namedobj_instance*, %struct.namedobj_instance** %4, align 8
  %10 = getelementptr inbounds %struct.namedobj_instance, %struct.namedobj_instance* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %8, align 8
  %12 = load %struct.namedobj_instance*, %struct.namedobj_instance** %4, align 8
  %13 = getelementptr inbounds %struct.namedobj_instance, %struct.namedobj_instance* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* %7, align 4
  %15 = load i8**, i8*** %5, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = bitcast i8* %16 to i32*
  %18 = load %struct.namedobj_instance*, %struct.namedobj_instance** %4, align 8
  %19 = getelementptr inbounds %struct.namedobj_instance, %struct.namedobj_instance* %18, i32 0, i32 1
  store i32* %17, i32** %19, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.namedobj_instance*, %struct.namedobj_instance** %4, align 8
  %23 = getelementptr inbounds %struct.namedobj_instance, %struct.namedobj_instance* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = bitcast i32* %24 to i8*
  %26 = load i8**, i8*** %5, align 8
  store i8* %25, i8** %26, align 8
  %27 = load i32, i32* %7, align 4
  %28 = load i32*, i32** %6, align 8
  store i32 %27, i32* %28, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
